# azure-event-hubs

./: .gitignore  build.sh
c/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
c/build_all/linux/: build.sh
c/cmake/: FindQPID_PROTON.cmake  compiler_options.cmake  dependencies.cmake
c/common/: CMakeLists.txt  Makefile  cmake_install.cmake
c/common/adapters/: httpapi_curl.c  lock_c11.c  lock_pthreads.c
c/common/inc/: lock.h
c/eventhub_client/: CMakeLists.txt  Makefile  cmake_install.cmake
c/eventhub_client/samples/: Makefile  cmake_install.cmake
c/eventhub_client/samples/send/: CMakeLists.txt  Makefile  main.c  send.c  send_sample
c/eventhub_client/samples/send_batch/: CMakeLists.txt  Makefile  send_batch_sample
c/eventhub_client/samples/sendasync/: CMakeLists.txt  Makefile  cmake_install.cmake  send_async_sample
c/eventhub_client/src/: eventhubclient.c  eventhubclient_ll.c  eventhubclient_ll.c.orig
c/eventhub_client/unittests/eventdata_unittests/: CMakeLists.txt
c/eventhub_client/unittests/eventhubclient_e2etests/: CMakeLists.txt
c/eventhub_client/unittests/eventhubclient_ll_unittests/: CMakeLists.txt  eventhubclient_ll_unittests.cpp  main.c
c/eventhub_client/unittests/eventhubclient_unittests/: CMakeLists.txt
c/lib/qpid-proton/lib/: libqpid-proton.so.3  libqpid-proton.so.3.0.0
c/lib/qpid-proton/lib/cmake/Proton/: ProtonConfig.cmake  ProtonConfigVersion.cmake
c/lib/qpid-proton/lib/pkgconfig/: libqpid-proton.pc
c/lib/qpid-proton/lib64/: libqpid-proton.3.0.0.dylib  libqpid-proton.3.dylib
c/lib/qpid-proton/lib64/cmake/Proton/: ProtonConfig.cmake
c/lib/qpid-proton/lib64/pkgconfig/: libqpid-proton.pc
c/lib/qpid-proton/lib64/proton/bindings/perl/: cproton_perl.pm
c/nbproject/: configurations.xml  project.xml
c/nbproject/private/: Default.properties  configurations.xml  private.xml
c/testtools/: CMakeLists.txt  Makefile  cmake_install.cmake
c/testtools/ctest/: CMakeLists.txt  CMakeLists.txt.orig
c/testtools/eventhub_test/: CMakeLists.txt  CMakeLists.txt.orig  Makefile  cmake_install.cmake
c/testtools/micromock/: CMakeLists.txt  CMakeLists.txt.orig
c/testtools/micromock/tools/micromockgenerator/: CMakeLists.txt  stdafx.h
cmake/: compiler_options.cmake
